Fixed alignment in home page

--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,9 @@ body {
     height: 220px;
 }
 
+.index-box{
+    padding: 10px;
+}
 
 
 /*********************/
